...
    case general, ring, plugins, appearance, about

    var id: Self { self }

    var title: String {
        switch self {
        case .general: "General"
        case .ring: "Ring"
        case .plugins: "Plugins"
        case .appearance: "Appearance"
        case .about: "About"
        }
    }

    var image: Image {
        switch self {
...
